# mneme

./: .env.example  .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.zcode/: .mcp.json  AGENTS.md
benchmarks/: retrieval_quality.json
plans/: 1782828324650-add-files-mid-session.md  1782828324650-graph-rag-improvements.md  1782828324650-hierarchical-enrich-plan.md  1782828324650-issue-1-security-tdd-plan.md  1782828324650-issue-16-llm-meta-answer-tdd-plan.md  1782828324650-p0p1-security-fix-plan.md  1782828324650-query-decomposer-plan.md  1782828324650-retrieval-failure-report.md  1782828324650-retrieval-fix-plan.md  1782828324650-review-verification.md  1782828324650-tui-rewrite-rich.md  1783057422696-auto-watch-dir-plan.md  2026-07-05-graph-rag-enrich-fix-tdd-plan.md  2026-07-05-llm-client-singleton-fix-plan.md  2026-07-06-dry-rag-graph-rag-refactor-plan.md  2026-07-06-issue-7-dry-refactor-plan.md  2026-07-07-graph-rag-dense-graph-fix-report.md  2026-07-07-graph-rag-entity-line-bugfix-plan.md  2026-07-20-project-optimization-assessment.md  SciClaw RAG技术总结.md  issue2-force-rebuild-collection-plan.md  lint-and-kiss-audit-report.md  onboarding-feature-plan.md  rag-first-principles-analysis-report.md  rag-tui-frontend.md  temperature-test-questions.md
scripts/: fix_scoring.py  generate_report.py  run_temperature_test.py
src/: citations.py  cli_loop.py  graph_rag.py  index_queue.py  metrics.py  quality.py  rag.py  rag_query_decomposer.py  security.py
test_texts/: LLMs_for_Mobility_Analysis_Survey.md  南京城市地理环境.docx
tests/: conftest.py  test_cli_loop.py  test_env_security.py  test_graph_rag_batch.py  test_graph_rag_enrich.py  test_graph_rag_model_selection.py  test_hierarchical_enrich.py  test_llm_client_singleton.py  test_llm_meta_answer.py  test_onboarding.py  test_phase_b_manifest.py  test_phase_c_quality.py  test_phase_d_p0.py  test_prepare_index_helper.py  test_query_decomposer.py  test_retrieval_fix.py  test_source_identity.py
tui/: __main__.py  app.py  (+7 more)
(+18 files in other folders)
