[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Knowledge-Augmented Q&A System"
requires-python = ">=3.10"
license = {text = "MIT"}

# 运行时依赖（与 requirements.txt 保持一致）
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "rank_bm25>=0.2.2",
    "openai>=1.0.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.2.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "rich>=13.0",
    "questionary>=2.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tui*"]

[tool.setuptools.package-data]
src = ["*.py"]
tui = ["*.py"]
