[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Knowledge-Augmented Q&A System"
requires-python = ">=3.10"
license = {text = "MIT"}

# 运行时依赖（与 requirements.txt 保持一致；版本经过 Python 3.12 基线验证）
dependencies = [
    "chromadb==1.5.9",
    "sentence-transformers==5.6.0",
    "modelscope==1.38.1",
    "rank_bm25==0.2.2",
    "openai==2.44.0",
    "PyMuPDF==1.28.0",
    "pdfplumber==0.11.10",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "langchain-text-splitters==1.1.2",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "rich==15.0.0",
    "questionary==2.1.1",
    "watchdog==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require an external LLM or other external service",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tui*"]

[tool.setuptools.package-data]
src = ["*.py"]
tui = ["*.py"]
